# sik-llms

./: .gitignore  Makefile  README.md  playbook.md  pyproject.toml  ruff.toml
.github/workflows/: tests.yaml
docs/: draft_pr_plan.md
examples/: cli.py  examples.ipynb  mcp_fake_server.py  mcp_fake_server_config.json  otel_101.md  telemetry_demo.py
examples/otel-stack/: Makefile  README.md  docker-compose.yaml  example_with_telemetry.py  otel-collector.yml  prometheus.yml  pyproject.toml  test_simple.py
src/sik_llms/: __init__.py  anthropic.py  azure_openai.py  gemini.py  mcp_manager.py  models_base.py  openai.py  reasoning_agent.py  telemetry.py  utilities.py
src/sik_llms/prompts/: final_answer_prompt.txt  reasoning_prompt.txt
tests/: conftest.py  test_anthropic.py  test_azure_openai.py  test_error_handling.py  test_gemini.py  test_images.py  test_mcp_manager.py  test_models_base.py  test_openai.py  test_reasoning_agent.py  test_sik_llms.py  test_structured_output.py  test_telemetry.py  test_telemetry_regression.py  test_tool_calling.py  test_trace_context.py  test_utilities.py
tests/test_files/: mcp_fake_server_calculator.py  mcp_fake_server_complex_types.py  mcp_fake_server_error.py  mcp_fake_server_misc.py  mcp_fake_server_text.py  reasoning_prompt_calculator_tool.txt  reasoning_prompt_calculator_weather_tool.txt  reasoning_prompt_mcp_tools.txt  reasoning_prompt_no_tools.txt
