[project]
name = "sik-llms"
version = "0.1.6"
description = "placeholder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.47.0",
    "dotenv>=0.9.9",
    "nest-asyncio>=1.6.0",
    "openai>=1.64.0",
    "pydantic>=2.10.6",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "pip>=25.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sik_llms"]

[build-system]
requires = ["hatchling>=1.17.1"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
